Handle the nested javadoc syntax '@see {@link ...}' better (#705)